<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>adapted-video-frontend</artifactId>
	<packaging>jar</packaging>
	<name>adapted-video-frontend</name>

	<parent>
		<artifactId>adapted-video-parent</artifactId>
		<groupId>fr.labri.progress.comet</groupId>
		<version>1.0-SNAPSHOT</version>
		<relativePath>../</relativePath>
	</parent>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.spring.platform</groupId>
				<artifactId>platform-bom</artifactId>
				<version>1.0.3.RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jersey</groupId>
				<artifactId>jersey-bom</artifactId>
				<version>2.13</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.glassfish.grizzly</groupId>
				<artifactId>grizzly-bom</artifactId>
				<version>2.3.17</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.amqp</groupId>
				<artifactId>spring-rabbit</artifactId>
				<version>1.4.0.RELEASE</version>
			</dependency>
<!-- 			<dependency> -->
<!-- 				<groupId>org.apache.jclouds.api</groupId> -->
<!-- 				<artifactId>swift</artifactId> -->
<!-- 				<version>1.9.2</version> -->
<!-- 			</dependency> -->
			
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-grizzly2-http</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>fr.labri.progess.comet</groupId>
			<artifactId>adapted-video-domain</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.ext</groupId>
			<artifactId>jersey-spring3</artifactId>
		</dependency>
		<dependency>
			<groupId>org.glassfish.grizzly</groupId>
			<artifactId>grizzly-http-servlet</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.amqp</groupId>
			<artifactId>spring-rabbit</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>

		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-jaxb-annotations</artifactId>
			<version>2.3.4</version>
		</dependency>

		<dependency>
			<groupId>com.lexicalscope.jewelcli</groupId>
			<artifactId>jewelcli</artifactId>
			<version>0.8.9</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>log4j-over-slf4j</artifactId>

		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jettison</artifactId>
		</dependency>


		
		
	<!-- need this for test with spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>


	</dependencies>
	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<plugins>

			<plugin>
				<groupId>org.jolokia</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<configuration>
					<finalName>frontend.jar</finalName>
					<images>


						<image>
							<name>dngroup/${project.artifactId}:latest</name>
							<alias>frontend</alias>

							<build>
								<assembly>
									<descriptorRef>artifact-with-dependencies</descriptorRef>
								</assembly>
								<from>java:8-jre</from>
								<maintainer>nherbaut@labri.fr</maintainer>
								<tags>
									<tag>latest</tag>
									<tag>${project.version}</tag>
								</tags>
								<ports>
									<port>8080</port>
								</ports>

								<cmd>
									<shell>java -cp /maven/*:/maven/${project.build.finalName} fr.labri.progress.comet.app.Main --host 0.0.0.0 --port 8080 --rabbit-host $AMQP_PORT_5672_TCP_ADDR --rabbit-port $AMQP_PORT_5672_TCP_PORT --streamer-url $STREAMER_URL</shell>
								</cmd>

							</build>

							<run>
								<ports>
									<port>localhost:8080:8080</port>
								</ports>
								<links>
									<link>
										broker:amqp
									</link>
									<link>
										streamer
									</link>

								</links>
							</run>
						</image>
					</images>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.2</version>
				<executions>
					<execution>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
					</execution>

				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>fr.labri.progress.comet.app.Main</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<inherited>true</inherited>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>fr.labri.progress.comet.app.Main</mainClass>
				</configuration>
			</plugin>
			
			<plugin>
       				<groupId>org.apache.maven.plugins</groupId>
			        <artifactId>maven-dependency-plugin</artifactId>
			        <version>2.10</version>
			        <executions>
			          <execution>
			            <id>copy</id>
			            <phase>package</phase>
			            <goals>
			              <goal>copy</goal>
			            </goals>
			            <configuration>
			              <artifactItems>
			                <artifactItem>
			                  <groupId>${project.groupId} </groupId>
			                  <artifactId>${project.artifactId}</artifactId>
			                  <version>${project.version}</version>
								 <classifier>jar-with-dependencies</classifier>
			                  <type>jar</type>
			                  <overWrite>false</overWrite>
			                  <outputDirectory>${project.build.directory}/../docker/</outputDirectory>
			                  <destFileName>${project.artifactId}.jar</destFileName>
			                  
			                </artifactItem>
			              </artifactItems>
			              <outputDirectory>${project.build.directory}/wars</outputDirectory>
			              <overWriteReleases>false</overWriteReleases>
			              <overWriteSnapshots>true</overWriteSnapshots>
			            </configuration>
			          </execution>
			        </executions>
			      </plugin>



            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jaxb2-maven-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>schemagen</id>
                        <goals>
                            <goal>schemagen</goal>
                        </goals>
                    </execution>
                </executions>
 
                <configuration>
                    <transformSchemas>
                        <transformSchema>
                            <uri>http://www.example.org/qualities</uri>
                            <toPrefix>qualities</toPrefix>
                            <toFile>qualities.xsd</toFile>
                        </transformSchema>
                        <transformSchema>
                            <uri>http://www.example.org/quality</uri>
                            <toPrefix>quality</toPrefix>
                            <toFile>quality.xsd</toFile>
                        </transformSchema>
                    </transformSchemas>
                    <includes>
                        <include>fr/labri/progress/comet/model/jackson</include>
                    </includes>
                    <verbose>true</verbose>
 
                </configuration>
            </plugin>
      
		</plugins>
		
		
		
	</build>
	<properties>
		<slf4j.version>1.7.7</slf4j.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>
